--- a/Server/lib/Web/public/css/in_kkutu.css
+++ b/Server/lib/Web/public/css/in_kkutu.css
@@ -15,6 +15,30 @@
  * You should have received a copy of the GNU General Public License
  * along with this program. If not, see <http://www.gnu.org/licenses/>.
  */
+html {
+    width: 100vw;
+    height: 100vh;
+	min-width: 1600px;
+	min-height: 900px;
+    transform-origin: top left;
+    transform: scale(1);
+	overflow-x: hidden;
+	overflow-y: hidden;
+}
+
+/* 1280px 이하의 디바이스에 대한 스타일 */
+@media (max-width: 1280px) {
+    html {
+        transform: scale(0.8);
+    }
+}
+
+/* 1024px 이하의 디바이스에 대한 스타일 */
+@media (max-width: 1024px) {
+    html {
+        transform: scale(0.6);
+    }
+}
 
 equ{
 	font-family: consolas;
@@ -91,6 +115,64 @@ input[type="checkbox"] {
     display: none;
 }
 
+@keyframes fadeIn {
+	from {
+	  opacity: 0;
+	  transform: scale(0.8);
+	}
+	to {
+	  opacity: 1;
+	  transform: scale(1);
+	}
+  }
+  
+  @keyframes zoomIn {
+	from {
+		transform: translate3d(0, 15%, 0);
+	}
+	to {
+		transform: translate3d(0, 0%, 0);
+	}
+  }
+
+  @keyframes zoomOut {
+	from {
+		transform: translate3d(0, 0%, 0);
+	}
+	to {
+		transform: translate3d(0, 15%, 0);
+	}
+  }
+
+ @keyframes fadeOut {
+	from {
+		opacity: 1;
+	}
+	to {
+		opacity: 0;
+	}
+ }
+
+	.closing-effect {
+	animation: fadeOut 0.5s ease, zoomOut 0.5s ease!important;
+	}
+
+  .dialog-front {
+	animation: fadeIn 0.5s ease, zoomIn 0.5s ease;
+	transform-origin: center;
+	position: fixed;
+  }
+
+  button:active {
+	transform: scale(0.95)!important;
+	transition: transform 0.1s ease!important;
+  }
+
+  button:hover {
+	transform: scale(1.05);
+	transition: transform 0.1s ease;
+  }
+
 iframe{
 	border: none;
 }
@@ -128,8 +210,9 @@ iframe{
     bottom: 0;
     position: fixed;
     width: 100vw;
+	min-width: 1600px;
     height: 70px;
-    background-color: white;
+    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
 }
 .kkutu-wrap{
 	max-width: 100rem;
@@ -147,11 +230,11 @@ iframe{
 
 .kkutu-menu button .fa {
     display: block;
-    font-size: 30px;
+    font-size: 25px;
 }
 
 .kkutu-menu button{
-	color: #546481;
+	color: #FFFFFF;
 	text-align: center;
     font-size: 20px;
     float: left;
@@ -168,7 +251,7 @@ iframe{
 		background: linear-gradient(180deg, rgba(39,134,255,1) 0%, rgba(21,169,255,1) 100%);
 	}
 	.kkutu-menu .icnbtn:hover{
-		background: #FFFFFF;
+		background: #FFFFFF00;
 	}
 	.kkutu-menu .toggled{
 		color: #EEEEEE;
@@ -178,10 +261,10 @@ iframe{
 		width: 60px !important;
 	}
 	#SettingBtn:hover{
-		color: #083344;
+		color: #1fa8df;
 	}
 	#CommunityBtn:hover{
-		color: #facc15;
+		color: rgb(180, 88, 255);
 	}
 	#HelpBtn:hover{
 		color: #22d3ee;
@@ -195,7 +278,7 @@ iframe{
 	padding: 5px;
 	color: #111111;
 	box-shadow: 0px 1px 1px #141414;
-	background-color: #EEEEEE;
+	background: linear-gradient(180deg, rgba(244,245,250,1) 0%, rgba(203,203,223,1) 80%);
 	z-index: 2;
 }
 	.dialog-bar{ float: left; margin: 3px 0px; width: 100%; }
@@ -247,6 +330,21 @@ iframe{
     width: 75px;
     height: 25px;
 }
+#DressDiag{
+	box-shadow: none;
+    background: transparent;
+}
+#DressDiag .dialog-head{
+	color: #ffffff!important;
+}
+
+#Community2Diag{
+	box-shadow: none;
+    background: transparent;
+}
+#Community2Diag .dialog-head{
+	color: #ffffff!important;
+}
 	.primaryBtn{
 		border: 1px solid #154792!important;
 		color: white!important;
@@ -264,19 +362,25 @@ iframe{
 	}
 	.dialog .closeBtn:hover{ color: cyan; }
 	.dialog-head{
+		font-weight: 700;
 		padding: 7px;
 		border-bottom: 1px solid #CCCCCC;
 		margin-bottom: 5px;
 		margin-left: -5px;
 		margin-right: -5px;
 		height: 28px;
-		color: #ffffff;
+		color: #1F2167;
 		font-size: 20px;
-		margin-top: -2px;
+		margin-top: 2px;
 		border-width: 3px;
 		border: #3E5B7B;
-		background: rgb(7,0,129);
-		background: linear-gradient(180deg, #225CAA 0%, #0E3F8B 100%);
+	}
+	#dimmer{
+	opacity: 0.6;
+    background-color: #000000;
+    inset: 0;
+    position: fixed;
+    z-index: 3;
 	}
 		.dialog-head .dialog-title{ text-align: center;float: left; cursor: move; }
 #replay-players{ height: 140px; overflow-y: scroll; }
@@ -869,7 +973,7 @@ min-height: 480px;
 	#ResultDiag .dialog-body div{ float: left; }
 		.result-board{
 			width: 400px;
-			height: 260px;
+			height: 377px;
 		}
 			.result-board-item{
 				padding: 5px;
@@ -977,7 +1081,7 @@ min-height: 480px;
 	}
 	.goods-box{
 		margin-top: 5px;
-		height: 125px;
+		height: 140px;
 		overflow-y: scroll;
 	}
 		.dress-type{
@@ -987,17 +1091,17 @@ min-height: 480px;
 			margin: 1px;
 			width: 42px;
 		}
-		#dress-cf{width:90px!important;}
 		.category-filter.selected{ color: #EEEEEE; background-color: #1597f5; }
 		.category-filter:hover{ background-color: #EEEEEE; }
 		.category-filter.selected:hover{ background-color: #222222; }
 		.dress-item{
+			background: linear-gradient(135deg, rgba(136,140,163,1) 0%, rgba(61,63,74,1) 100%);
 			float: left;
 			padding: 1px;
 			border: 1px solid #CCCCCC;
 			margin: 1px;
-			width: 40px;
-			height: 40px;
+			width: 60px;
+			height: 60px;
 		}
 		.dress-equipped{ padding: 0px; border: 2px solid #FFB861; }
 		.dress-expl{ width: 240px; font-size: 11px; }
@@ -1005,7 +1109,12 @@ min-height: 480px;
 			.dress-item-group{ float: left; padding-top: 1px; width: 80px; color: #BBBBBB; text-align: right; }
 			.dress-item-term{ float: left; color: #FFBB77; }
 			.dress-expl label{ display: inline; padding: none; font-size: inherit; }
-			.dress-item-image{ width: 40px; height: 40px; font-size: 11px; text-align: right; text-shadow: 0px 0px 3px #111111; }
+			.dress-item-image{ color: #ffffff;
+				width: 60px;
+				height: 60px;
+				font-size: 16px;
+				text-align: right;
+				text-shadow: 0px 2px 0px #111111; }
 			.dress-item-expl{ float: left; margin: 2px 0px; width: 100%; }
 			.dress-item-opts{ float: left; padding-top: 4px; border-top: 1px dashed #777777; margin-top: 2px; width: 100%; }
 				.item-opts-head{ color: #EEEE44; }
