볼륨으로 인한 서버 장애 개선

--- a/Server/lib/Web/public/css/in_kkutu.css
+++ b/Server/lib/Web/public/css/in_kkutu.css
@@ -148,6 +148,64 @@ input[type="checkbox"] {
     display: none;
 }
 
+/* 플러스끄투 커스텀 레인지 */
+.range-input {
+    -webkit-appearance: none!important;
+    appearance: none;
+    width: 100%;
+    cursor: pointer;
+    outline: none!important;
+    border-radius: 15px;
+    height: 6px!important;
+    background: #ccc;
+}
+  
+  .range-input::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	appearance: none; 
+	height: 15px;
+	width: 15px;
+	background-color: #f50;
+	border-radius: 50%;
+	border: none;
+	transition: .2s ease-in-out;
+  }
+  
+  .range-input::-moz-range-thumb {
+	height: 15px;
+	width: 15px;
+	background-color: #f50;
+	border-radius: 50%;
+	border: none;
+	transition: .2s ease-in-out;
+  }
+  
+  .range-input::-webkit-slider-thumb:hover {
+	box-shadow: 0 0 0 10px rgba(255,85,0, .1)
+  }
+  .range-input:active::-webkit-slider-thumb {
+	box-shadow: 0 0 0 13px rgba(255,85,0, .2)
+  }
+  .range-input:focus::-webkit-slider-thumb {
+	box-shadow: 0 0 0 13px rgba(255,85,0, .2)
+  }
+  
+  .range-input::-moz-range-thumb:hover {
+	box-shadow: 0 0 0 10px rgba(255,85,0, .1)
+  }
+  .range-input:active::-moz-range-thumb {
+	box-shadow: 0 0 0 13px rgba(255,85,0, .2)
+  }
+  .range-input:focus::-moz-range-thumb {
+	box-shadow: 0 0 0 13px rgba(255,85,0, .2)    
+  }
+  
+  .value2, .value3, .value4 {
+	font-size: 26px;    
+	width: 50px;
+	text-align: center;
+  }
+  
 @keyframes fadeIn {
 	from {
 	  opacity: 0;
@@ -210,6 +268,7 @@ iframe{
 	border: none;
 }
 #Yell{
+	z-index: 6974;
 	position: fixed;
 	padding: 10px 0px;
 	margin-top: 200px;
