GCP에 로깅 및 일부 심의사항 수정

--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -339,7 +339,7 @@ block Middle
 			button#kick-vote-no= L('disagree')
 			button#kick-vote-yes= L('agree')
 	+Dialog('PurchaseDiag', 300, 600, L('purchase', false))
-		h4.opt(style='font-size: 14px; text-align: center; color: #486AA3;')= "PlusCoin을 통해 구매한 핑이 먼저 차감됩니다."
+		h4.opt(style='font-size: 14px; text-align: center; color: #486AA3;')= "구매하시겠어요?"
 		div.dialog-bar
 			h4.opt!= L('pingBefore')
 			h4.dialog-bar-value.purchase-ping#purchase-ping-before
