--- a/Server/lib/Web/public/css/in_kkutu.css
+++ b/Server/lib/Web/public/css/in_kkutu.css
@@ -654,34 +654,68 @@ min-height: 480px;
 		.team-button:hover{ border-bottom: 4px solid rgba(0, 0, 0, 0.5); margin-top: -2px; }
 		.team-unable div{ background-color: #BBBBBB; cursor: not-allowed; }
 		.team-chosen{ font-weight: bold; }
-		.team-0{ background-color: #000000; }
+		.team-0{ background-color: #FFFFFF; }
 		.team-1{ background-color: #FF5555; }
 		.team-2{ background-color: #FFBF30; }
 		.team-3{ background-color: #88C525; }
 		.team-4{ background-color: #4A90D6; }
+
+		.nameTeam-1{ color: #F99!important; }
+		.nameTeam-2{ color: #FF7!important; }
+		.nameTeam-3{ color: #7C7!important; }
+		.nameTeam-4{ color: #99F!important; }
+
+		.room-masterBg{
+			background-color: #00E4E2!important;
+		}
+		.room-readyBg{
+			background-color: #EECF2F!important;
+		}
+
+		
 	.room-user{
+		background: linear-gradient(180deg, rgba(55,78,107,1) 0%, rgba(76,100,135,1) 100%);
 		float: left;
-		padding: 3px;
 		margin: 3px;
-		width: 224px;
-		height: 151px;
+		width: 290px;
+		height: 200px;
 		box-shadow: 0px 1px 1px #777777;
-		background-color: #E4E4E4;
 	}
 		.room-user div{ float: left; }
-		.room-user-image{ margin: 3px; width: 100px; height: 100px; }
-		.room-user-stat{ padding: 3px; width: 112px; height: 100px; font-size: 15px; }
-			.room-user-stat div{ margin-bottom: 4px; }
-			.room-user-ready{ width: 100%; text-align: right; font-weight: bold; }
-				.room-user-readied{ color: #3A8BDF; }
+		.room-user-image{ margin-right: 90px;
+			margin-left: 90px;
+			width: 110px;
+			height: 110px; }
+		.room-user-stat{ margin-top: 13px;
+			background-color: rgba(0,0,0,0);
+			justify-content: center;
+			display: flex;
+			align-items: center;
+			padding: 0px 0px 3px 3px;
+			width: calc(100% - 3px);
+			height: 32px;
+			font-size: 22px; }
+			.room-user-ready{ font-weight: bold; }
+				.room-user-readied{ color: #A07A0F; }
 				.room-user-spectate{ color: #8160FF; }
 				.room-user-practice{ color: #E1BA2D; }
-				.room-user-master{ color: #E14E2D; }
-			.room-user-team{ margin-left: 60%; width: 40%; text-align: center; }
-		.room-user-title{ padding: 6px 4px; width: 216px; font-size: 15px; }
+				.room-user-master {
+					text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+					color: #E7C631;
+					font-style: italic;
+				}
+			.room-user-team{ text-align: center; }
+		.room-user-title{ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+			justify-content: center;
+			display: flex;
+			align-items: center;
+			padding: 6px 4px;
+			width: 100%;
+			font-size: 21px;
+			color: white; }
 		.room-user-level{ width: 30px; height: 30px; }
-		.room-user-name{ padding: 9px 0px 0px 4px; font-weight: bold; }
-		.room-user:hover{ cursor: pointer; background-color: #EEEEEE; }
+		.room-user-name{ padding: 0px 0px 0px 4px; }
+		.room-user:hover{ cursor: pointer; background: linear-gradient(180deg, rgba(65,77,96,1) 0%, rgba(87,102,124,1) 100%); }
 .GameBox{
 	width: 100%!important;
 	max-height: 480px;
