--- a/frontpage/public/css/in_m_kkutu.css
+++ b/frontpage/public/css/in_m_kkutu.css
@@ -86,6 +86,38 @@ iframe{
 	pointer-events: none;
 	background-color: rgba(0, 0, 0, 0.7);
 }
+
+/* 토스트 메시지 */
+#tost_message {
+	border-bottom: 5px solid rgba(21,169,255,1);
+    background: linear-gradient(180deg, rgba(23,25,100,1) 0%, rgba(23,32,107,1) 100%);
+    width: 100%;
+    z-index: 300;
+    opacity: 0;
+    position: fixed;
+    top: -100px;
+    text-align: center;
+    transform: translate(0, -50%);
+    padding: 10px 10px 10px 5px;
+    color: #fff;
+    box-shadow: 3px 4px 11px 0px #00000040;
+    transition: all 0.5s;
+}
+
+/* 토스트 메시지 활성화 되었을 때 */
+#tost_message.active {
+    opacity: 100%;
+    top: 5%; /* 변경된 부분: left에서 right로 변경 */
+}
+
+#dimmer{
+	opacity: 0.6;
+    background-color: #000000;
+    inset: 0;
+    position: fixed;
+    z-index: 3;
+	}
+	
 #ReadyBtn{
 	animation: ReadyBlink 1s linear infinite;
 }
