--- a/frontpage/public/css/style.css
+++ b/frontpage/public/css/style.css
@@ -21,21 +21,21 @@
 /* Extrabold */
 @font-face {
 	font-family: 'KartGothic';
-	src: url('../media/kart-eb.woff') format('woff');
+	src: url('/webfonts/kart-eb.woff') format('woff');
 	font-weight: 800;
 }
 
 /* Bold */
 @font-face {
 	font-family: 'KartGothic';
-	src: url('../media/kart-bold.woff') format('woff');
+	src: url('/webfonts/kart-bold.woff') format('woff');
 	font-weight: bold;
 }
 
 /* Medium */
 @font-face {
 	font-family: 'KartGothic';
-	src: url('../media/kart-med.woff') format('woff');
+	src: url('/webfonts/kart-med.woff') format('woff');
 	font-weight: 500;
 }
 
