--- a/Server/lib/Web/public/css/style.css
+++ b/Server/lib/Web/public/css/style.css
@@ -165,20 +165,51 @@ span{
 }
 	.autocomp-item{ margin: 1px 0px; }
 	.autocomp-item:hover, .autocomp-select{ color: #FFFFFF; background-color: rgba(50, 50, 50, 0.8); }
-#account{ float: right; margin-right: 30px; margin-top: 8px; font-size: 24px; color: #FFFFFF; }
+#account{ float: right; margin-right: 30px; margin-top: 8px; font-size: 24px; color: #FFFFFF; display: flex;}
 #account-setting{
 	float: left;
 	padding-top: 8px;
 	width: 50px;
 	text-align: center;
 }
+.accountItem{
+    min-width: 150px;
+    padding-top: 4px;
+    font-size: 20px;
+    padding-right: 8px;
+    padding-left: 8px;
+    margin-right: 8px;
+    margin-top: 8px;
+    background-color: #26252D;
+
+}
+.flex{
+	display: flex;
+}
 #account-info{
-	float: left;
-	padding-top: 8px;
-	text-align: center;
 	cursor: pointer;
 	transition: color 300ms ease;
 }
+.aISub{
+	width: 100%;
+    text-align: right;
+    display: block;
+}
+.fuckSeogom{
+	color: #c3c3c3;
+	display: inline-block;
+}
+.fuckHank{
+	padding-top: 2px;
+    height: 25px;
+}
+.fuckHoSeo{
+    padding-left: 8px;
+    padding-top: 2px;
+    line-height: 12px;
+    font-size: 12px;
+}
+
 #account-info:hover{ color: #EEEEEE; }
 
 
@@ -260,9 +291,6 @@ span{
 }
 .product-body #Top{ display: none; }
 .product-body #Bottom{ display: none; }
-.graph{
-	box-shadow: 0px 1px 1px #141414;
-}
 .graph-bar{
 	height: 100%;
 }
@@ -333,7 +361,7 @@ span{
 	width: 100%;
 	height: 60px;
 	background-image: url('/img/topbg.png');
-	z-index: 5;
+	z-index: 3;
 }
 #Middle{
 	margin-left: auto!important;
