--- a/Server/lib/Web/public/css/in_m_kkutu.css
+++ b/Server/lib/Web/public/css/in_m_kkutu.css
@@ -111,11 +111,7 @@ iframe{
 }
 
 #dimmer{
-	opacity: 0.6;
-    background-color: #000000;
-    inset: 0;
-    position: fixed;
-    z-index: 3;
+	display: none;
 	}
 	
 #ReadyBtn{
