--- a/Server/lib/Web/views/gwalli.pug
+++ b/Server/lib/Web/views/gwalli.pug
@@ -89,13 +89,11 @@ block Middle
 			div
 				table
 					thead: tr
-						td #
-						td money
-						td kkutu
-						td box
-						td equip
-						td nickname
-						td nickChanged
+						td 고유번호
+						td 핑
+						td 계정 스코어
+						td 인벤토리
+						td 장착 아이템
 						td exordial
 						td 활동 서버
 						td 마지막 로그인
