--- a/Server/lib/Web/views/layout.pug
+++ b/Server/lib/Web/views/layout.pug
@@ -51,14 +51,24 @@ html
 	body(style='min-width: 640px;')
 		div#Loading= L('LOADING')
 		div#Intro
-			img#intro(src='/img/kkutu/intro.png')
+			dotlottie-player(
+			src="/media/idM0YfRCz5.lottie",
+			background="#ffffff",
+			speed="1",
+			style="width: 100vw; hegiht: 100vh;",
+			direction="1",
+			mode="normal",
+			loop="false",
+			id="lottiePlayer",
+			autoplay
+			)
 			div#version= VERSION
 			div#intro-text= L('LOADING')
 		block Top
 		div#Jungle
 			span#mobile= locals.mobile
 			span#summonerID= DATA._id
-			img#Background(src='/img/bg/newbg.png')
+			img#Background(src='/img/bg/newbg.png', data-tilt, data-tilt-glare, data-tilt-max-glare="0.8")
 			block Jungle
 		div#Middle
 			block Middle
