--- a/Server/lib/Web/views/module.pug
+++ b/Server/lib/Web/views/module.pug
@@ -123,6 +123,7 @@ mixin PageHead(min)
 	script(type='text/javascript', src='/js/jquery.js')
 	script(type='text/javascript', src='/language/'+locals.page.replace("/", "_")+'/'+locals.lang)
   	
+	script(src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs", type="module")
 
 	if PUBLIC && !SESSION.admin
 		//script(type='text/javascript', src='/js/google.js')
