--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -45,7 +45,7 @@ block JS
 	script(type='text/javascript', src='/js/fabric.min.js')
 	script(type='text/javascript', src='/js/diff-match-patch-compressed.js')
 	script(type='text/javascript', src='/js/vanilla-tilt.min.js')
-	script(src='https://www.google.com/recaptcha/api.js')
+	script(src='https://challenges.cloudflare.com/turnstile/v0/api.js?compat=recaptcha', async, defer)
 
 block CSS
 	link(rel='stylesheet', href='/css/in_game_kkutu_shop.css')
@@ -57,7 +57,6 @@ block Jungle
 	span#URL= `${locals.PROTOCOL}://${locals.HOST}:${locals.PORT}/${locals._id}`
 	span#MOREMI_PART= locals.MOREMI_PART.join(',')
 	span#AVAIL_EQUIP= locals.AVAIL_EQUIP.join(',')
-	span#NICKNAME_LIMIT= locals.NICKNAME_LIMIT ? JSON.stringify(locals.NICKNAME_LIMIT) : "{}"
 	span#RULE= JSON.stringify(locals.RULE)
 	span#OPTIONS= JSON.stringify(locals.OPTIONS)
 	div#Yell
@@ -106,7 +105,7 @@ block Top
 
 block Middle
 	- var VERSION = L('version');
-	- var nick = SESSION.profile && SESSION.profile.nickname;
+	- var nick = SESSION.profile ? (SESSION.profile.title || SESSION.profile.name) : null;
 
 
 	div#dimmer(style="display: none;")
@@ -399,8 +398,6 @@ block Middle
 		
 	+Dialog('DressItemDiag', 600, 360, L('dress', false))
 		div.dialog-bar
-			h4(style='width: 150px;')= L('myNickname')
-			input#dress-nickname(type='textfield', placeholder=L('myNicknameX'), style='width: 435px;', maxlength=12)
 			h4(style='width: 150px;')!= L('myExordial')
 			input#dress-exordial(type='textfield', placeholder=L('myExordialX'), style='width: 435px;', maxlength=100)
 		div.dialog-bar(style='width: 150px;')
